[package]
name = "hello_wasi"
version = "0.1.0"
authors = ["Sean Hellum <seanhellum45@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.37"
pulldown-cmark = "0.5.3"
